--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
+<head>
 <link rel="stylesheet" href="styles/styles1.css">
-    <link rel="stylesheet" href="styles/styles2.css">
+<link rel="stylesheet" href="styles/styles2.css">
+</head>
