--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Page</title>
+    <link rel="stylesheet" href="styles/styles1.css">
+<link rel="stylesheet" href="styles/styles2.css">
 </head>
 <body>
     <h1>Welcome to My Web Page</h1>
-    <p>Here are some images:</p>
+    <p>Here are some cate:</p>
     <img src="images/images.jpg" alt="Image 1">
     <img src="images/youth-time-nazor-domnoukany-svet-01.jpg" alt="Image 2">
+    <p>Here are some dog:</p>
+    <img src="images/scale_1200.jfif" alt="Image 3">
+    <img src="images/369cd284a8325d8f4ce494fee7c09d8d.jpg" alt="Image 4">
 </body>
 </html>
-=======
-<head>
-<link rel="stylesheet" href="styles/styles1.css">
-<link rel="stylesheet" href="styles/styles2.css">
-</head>
->>>>>>> styles
+
+
