--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Page</title>
-    <link rel="stylesheet" href="styles/styles1.css">
-<link rel="stylesheet" href="styles/styles2.css">
+    <link rel="stylesheet" type="text/css" href ="styles/styles1.css">
+    <link rel="stylesheet" type="text/css" href ="styles/styles2.css">
 </head>
 <body>
     <h1>Welcome to My Web Page</h1>
