--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Web Page</title>
     <link rel="stylesheet" type="text/css" href ="styles/styles1.css">
     <link rel="stylesheet" type="text/css" href ="styles/styles2.css">
+    <link rel="stylesheet" type="text/css" href ="styles/styles3.css">
 </head>
 <body>
     <h1>Welcome to My Web Page</h1>
@@ -16,6 +17,10 @@
     <p>Here are some dog:</p>
     <img src="images/scale_1200.jfif" alt="Image 3">
     <img src="images/369cd284a8325d8f4ce494fee7c09d8d.jpg" alt="Image 4">
+    <p>Here are some:</p>
+    <img src="images2/292.jpg" alt="1">
+    <img src="images2/293.970.png" alt="4">
+    <img src="images2/5352824d75e0a67417e2e9aab90785b9.jpg" alt="6">
 </body>
 </html>
 
