update index.html and styles4

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <h1>Welcome to My Web Page</h1>
-    <p>Here are some cate:</p>
+    <h2>Here are some cate:</h2>
     <img src="images/images.jpg" alt="Image 1">
     <img src="images/youth-time-nazor-domnoukany-svet-01.jpg" alt="Image 2">
-    <p>Here are some dog:</p>
+    <h3>Here are some dog:</h3>
     <img src="images/scale_1200.jfif" alt="Image 3">
     <img src="images/369cd284a8325d8f4ce494fee7c09d8d.jpg" alt="Image 4">
     <h3>Here are some:</h3>
